Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignNumObjIntegerField.quorum
class Main
    integer v = 5
    action Main
        Test(v)
    end

    action Test(Number var)
        if var:GetValue() = 5.0
            output "passed"
        end
    end
end
