Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumObjIntegerWrapped.quorum
class main
    action Main
        integer i = 5
        Number num = i
    end
end